apps/dev/chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Chat Service"
          ports:
            - containerPort: 5678
