apps/dev/chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
