apps/dev/chat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  namespace: chat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: chat.50.85.57.248.nip.io
      http:
        paths:
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
